# SlotMap

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
include/: SloptMap.h
include/Slotmap/: Slot.hpp  Slotmap.hpp
src/: SloptMap.cpp  SlotMap.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/unit/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
